perf&test(logsearch): 增加logsearch的集成测试,优化 logsearch 相关代码
Signed-off-by: 汪世胤 <wangshiyin@hinadt.com>